Nova árvore adicionada ao formulário de restore

--- a/nimbus/restore/templates/restore_list.html
+++ b/nimbus/restore/templates/restore_list.html
@@ -3,6 +3,8 @@
 {% block headtags %}
 <script type="text/javascript" src="/media/js/restore.js"></script>
 <script type="text/javascript" src="/media/lib/js/tree_plugin.js"></script>
+<script type="text/javascript" src="/media/js/veezortree.js"></script>
+<link rel="stylesheet" type="text/css" href="/media/css/veezortree.css"/>
 <link rel="stylesheet" type="text/css" href="/media/css/restore.css" />
 
 {% endblock %}
@@ -131,16 +133,19 @@
     				<input type="text" name="pattern" id="pattern" class="text small" />
     				<button type="button" class="css3button big positive" id="buscar_arquivos" value="Buscar">Buscar</button>
     			</p>
+				<ul id="files" job="" computer="" is_windows="true" destination="false" restore="true"></ul>
 
-                <ul class="tree"><li class="directory first"><span><a href="#" path="/">Arquivos</a></span></li></ul>
+                <!-- <ul class="tree"><li class="directory first"><span><a href="#" path="/">Arquivos</a></span></li></ul> -->
                 
                 <div class="clear"></div><hr />
                 <a href="#" class="css3button positive open_step_4"><span>Selecionar local para restauração</span></a>
             </div>
             <div class="restore_step_4" class="hidden">
                 <h2 class="titulo_step">4. Local para restauração</h2>
+
+				<ul id="destination" restore="false" destination="true" computer="" is_windows="true"></ul>
                 
-                <ul class="tree_computer"><li class="directory first"><span><a href="#" path="/">Selecione o local para restauração</a></span></li></ul>
+                <!-- <ul class="tree_computer"><li class="directory first"><span><a href="#" path="/">Selecione o local para restauração</a></span></li></ul> -->
     		    <p>
                     <button type="submit" class="css3button big positive" value="Restaurar Arquivos">Restaurar Arquivos</button>
                 </p>
