--- a/nimbus/filesets/templates/add_fileset.html
+++ b/nimbus/filesets/templates/add_fileset.html
@@ -1,7 +1,5 @@
 {% block headtags %}
-<!-- <link rel="stylesheet" type="text/css" href="/media/css/filesets.css" media="screen" /> -->
 <script type="text/javascript" src="/media/js/filesets.js"></script>
-<!-- <script type="text/javascript" src="/media/lib/js/tree_plugin.js"></script> -->
 <script type="text/javascript" src="/media/js/veezortree.js"></script>
 <link rel="stylesheet" type="text/css" href="/media/css/veezortree.css"/>
 {% endblock %}
@@ -15,7 +13,7 @@
 	</div>		<!-- .block_head ends -->
 	<div class="block_content">
         <form action="/filesets/do_add/" method="post" id="main_form">
-			<ul id="arvore1" class="veezortree" check_type="checkbox" computer="{{computer.id}}" is_windows="{% if computer.operation_system == "windows" %}true{% else %}false{% endif %}" hide_files="false"></ul>
+			<ul id="arvore1" class="veezortree" restore="false" destination="false" computer="{{computer.id}}" is_windows="{% if computer.operation_system == "windows" %}true{% else %}false{% endif %}"></ul>
 			<input type="hidden" name="files-TOTAL_FORMS" value="0" id="id_files-TOTAL_FORMS">
 			<input type="hidden" name="files-INITIAL_FORMS" value="0" id="id_files-INITIAL_FORMS">
 			<input type="hidden" name="files-MAX_NUM_FORMS" id="id_files-MAX_NUM_FORMS">
