--- a/nimbus/media/css/veezortree.css
+++ b/nimbus/media/css/veezortree.css
@@ -5,9 +5,9 @@ ul.veezortree { border: solid 1px;
 .veezortree ul {display: hidden; padding-left: 17px}
 .veezortree li {margin-top: 3px;}
 .end_path { padding-left: 26px;}
-li.directory {background: url(../icons/folder.png) no-repeat 20px 0px;}
-li.open {background: url(../icons/folder-open.png) no-repeat 20px 0px;}
-li.file {background: url(../icons/file_generic.png) no-repeat 20px 0px;}
+li.directory {background: url(../icons/folder.png) no-repeat 20px;}
+li.open {background: url(../icons/folder-open.png) no-repeat 20px;}
+li.file {background: url(../icons/file_generic.png) no-repeat 20px;}
 div#wait {position: absolute;
 		   border: solid 1px;
 		   background: #AAAAAA;
