--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -58,7 +58,7 @@
 					<li class="active"><a href="#">Backup</a>
 					    <ul>
 					        <li><a href="/procedures/add">Criar backup</a></li>
-                            <li><a href="/restore/view/">Restaurar Backup</a></li>
+                            <li><a href="/restore/step1/">Restaurar Backup</a></li>
                             <li><a href="/procedures/profile/list">Listar perfis de configuração</a></li>
                             <li><a href="/procedures/list">Listar procedimentos</a></li>
                         </ul>
