Link para página de downloads de software clientes

--- a/nimbus/computers/templates/computers_add.html
+++ b/nimbus/computers/templates/computers_add.html
@@ -7,6 +7,10 @@
 
 {% block page %}
 
+<div class="message info">
+    <p> Para adicionar um computador ao sistema é necessário instalar o software cliente. Para obtê-lo clique <a href="http://download.nimbusbackup.com/client/"> aqui </a>. </p>
+</div>
+
 <div class="block">
 
 	<div class="block_head">
