--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -20,7 +20,7 @@
 	<script type="text/javascript" src="/media/jquery.js"></script>
 	<script type="text/javascript" src="/media/jquery.cookie.js"></script>
     <script type="text/javascript" src="/media/main.js"></script>
-	<script type="text/javascript" src="/media/js/iphone-style-checkboxes/jquery/iphone-style-checkboxes.js"></script>
+	<!-- // <script type="text/javascript" src="/media/js/iphone-style-checkboxes/jquery/iphone-style-checkboxes.js"></script> -->
     <script type="text/javascript" src="/media/lib/js/jquery.filestyle.mini.js"></script>
 	<script type="text/javascript" src="/media/lib/js/jquery.date_input.pack.js"></script>
 	<script type="text/javascript" src="/media/lib/js/facebox.js"></script>
