--- a/nimbus/restore/templates/step2.html
+++ b/nimbus/restore/templates/step2.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block headtags %}
-<link rel="stylesheet" type="text/css" href="/media/css/new_restore.css" />
+<link rel="stylesheet" type="text/css" href="/media/css/restore.css" />
 {% endblock %}
 
 {% block page %}
