--- a/nimbus/restore/templates/step6.html
+++ b/nimbus/restore/templates/step6.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
 {% block headtags %}
-<script type="text/javascript" src="/media/js/new_restore.js"></script>
+<script type="text/javascript" src="/media/js/restore.js"></script>
 <script type="text/javascript" src="/media/js/veezortree.js"></script>
 <link rel="stylesheet" type="text/css" href="/media/css/veezortree.css"/>
-<link rel="stylesheet" type="text/css" href="/media/css/new_restore.css" />
+<link rel="stylesheet" type="text/css" href="/media/css/restore.css" />
 {% endblock %}
 
 {% block page %}
@@ -19,21 +19,27 @@
 
     <div class="block_content">
 	<h2>Passo 5: Resumo</h2><br />
-        <form action="/restore/restore_files/" method="post">
+        <form action="/restore/restore_files/" id="restore_form" method="post">
 			<p>
-				<label>Computador:</label> {{computer.name}}
+				<label>Computador:</label><br />
+					Nome: {{computer.name}}<br />
+					Endereço IP: {{computer.address}}<br />
+					Sistema Operacional: {{computer.operation_system|capfirst}}
 			</p>	
 			<p>
-				<label>Procedimento:</label> {{procedure.name}}
+				<label>Procedimento:</label> {{procedure.name}}<br/>
+				<label>Data do backup:</label> {{job.end_time}}<br/>
+				<label>Tipo de backup:</label> {{job.backup_level}}<br/>
+				<label>Dados armazenados em:</label> {{procedure.storage}}<br/>
+				<label>Arquivos serão restaurados em:</label> {% if destination == ""%}Seus locais de origem{% else %}{{destination}}{% endif %}
 			</p>
 			<p>
-				<label>Backup:</label> {{job.end_time}} - {{job.backup_level}} - {{job.jobfiles}} arquivos ({{job.human_readable_size.size}} {{job.human_readable_size.unit}})
-			</p>
-			<p>
-				<label>Arquivos a restaurar:</label> {{files|length}} arquivos
-			</p>
-			<p>
-				<label>Destino dos arquivos:</label> {{destination}}
+				<label>Arquivos a restaurar:</label> {% if files|length == 1%}1 arquivo ou diretório{% else %}{{files|length}} arquivos ou diretórios{%endif%}
+				<ul id="file_list_to_restore" class="file_lists">
+					{% for file in files %}
+					{% if file|last == "/"%}<li class="directory">{{file}}{% else %}<li class="file">{{file}}{%endif%}</li>
+					{% endfor %}
+				</ul>
 			</p>
 			<input type="hidden" name="computer_id" value="{{computer.id}}"></input>
 			<input type="hidden" name="procedure_id" value="{{procedure.id}}"></input>
@@ -43,7 +49,7 @@
 			{% endfor %}
 			<input type="hidden" name="destination" value="{{destination}}"></input>
 			<div>
-				<a href="#" class="css3button negative last_step"><span>Voltar ao passo 5: Escolher o destino</span></a>
+				<a href="#" class="css3button negative last_step" onClick="$('#restore_form')[0].action = '/restore/step5/'; $('#restore_form')[0].submit();"><span>Voltar ao passo 5: Escolher o destino</span></a>
 				<button type="submit" class="css3button positive next_step">Restaurar</button>
 			</div>
         </form>
