--- a/nimbus/restore/templates/step3.html
+++ b/nimbus/restore/templates/step3.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block headtags %}
-<link rel="stylesheet" type="text/css" href="/media/css/new_restore.css" />
+<link rel="stylesheet" type="text/css" href="/media/css/restore.css" />
 {% endblock %}
 
 {% block page %}
@@ -35,7 +35,7 @@
 			<input type="hidden" name="computer_id" value="{{computer.id}}"></input>
 			<input type="hidden" name="procedure_id" value="{{procedure.id}}"></input>
 			<div>
-				<a href="#" class="css3button negative last_step"><span>Voltar ao passo 2: Escolher o procedimento</span></a>
+				<a href="#" class="css3button negative last_step" onClick="$('#restore_form')[0].action = '/restore/step2/'; $('#restore_form')[0].submit();"><span>Voltar ao passo 2: Escolher o procedimento</span></a>
 				<button type="submit" class="css3button positive next_step">Passo 4 - Escolher os arquivos</button>
 			</div>
         </form>
