--- a/nimbus/restore/templates/step5.html
+++ b/nimbus/restore/templates/step5.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
 {% block headtags %}
-<script type="text/javascript" src="/media/js/new_restore.js"></script>
+<script type="text/javascript" src="/media/js/restore.js"></script>
 <script type="text/javascript" src="/media/js/veezortree.js"></script>
 <link rel="stylesheet" type="text/css" href="/media/css/veezortree.css"/>
-<link rel="stylesheet" type="text/css" href="/media/css/new_restore.css" />
+<link rel="stylesheet" type="text/css" href="/media/css/restore.css" />
 {% endblock %}
 
 {% block page %}
@@ -19,7 +19,7 @@
 
     <div class="block_content">
 	<h2>Passo 5: Selecionar o local de destino dos arquivos</h2><br />
-        <form action="/restore/step6/" method="post">
+        <form action="/restore/step6/" id="restore_form" method="post">
 			<p>
 				<label>Computador:</label> {{computer.name}}
 			</p>	
@@ -34,7 +34,12 @@
 			</p>
 			<p>
                 <label for="job_id">Selecione o destino dos arquivos:</label>
-				<ul class="veezortree" id="destination" restore="false" destination="true" job="{{job.jobid}}" computer="{{computer.id}}" is_windows="{% if computer.operation_system == "windows" %}true{% else %}false{% endif %}"></ul>
+				<ul class="veezortree" id="destination" restore="false" destination="true" job="{{job.jobid}}" computer="{{computer.id}}" is_windows="{% if computer.operation_system == "windows" %}true{% else %}false{% endif %}">
+					<li>
+						<input type="radio" checked="true" name="destination_restore_path" value="" class="full_path">
+						<span class="end_path" onclick="fetch_dir_content('destination', 'C:/', '7', 'destination1')">Restaurar arquivos em seus locais de origem</span>
+					</li>
+				</ul>
             </p>
 			<input type="hidden" name="computer_id" value="{{computer.id}}"></input>
 			<input type="hidden" name="procedure_id" value="{{procedure.id}}"></input>
@@ -43,7 +48,7 @@
 			<input type="hidden" name="paths" value="{{file}}"></input>
 			{% endfor %}
 			<div>
-				<a href="#" class="css3button negative last_step"><span>Voltar ao passo 4: Escolher os arquivos</span></a>
+				<a href="#" class="css3button negative last_step" onClick="$('#restore_form')[0].action = '/restore/step4/'; $('#restore_form')[0].submit();"><span>Voltar ao passo 4: Escolher os arquivos</span></a>
 				<button type="submit" class="css3button positive next_step">Passo 6 - Resumo</button>
 			</div>
         </form>
