--- a/nimbus/restore/templates/step3.html
+++ b/nimbus/restore/templates/step3.html
@@ -26,12 +26,23 @@
 			<p>
                 <label for="job_id">Selecione o backup a ser restaurado:</label>
                 <select name="job_id" id="job_id" >
+					{% if jobs|length == 0%}
+					<option value=""> Não há nenhum backup para este computador e procedimento neste período</option>
+					{% else %}
                     <option value=""> - Selecione - </option>
                     {% for job in jobs %}
                     <option value="{{job.jobid}}">{{job.end_time}} - {{job.backup_level}} - {{job.jobfiles}} arquivos ({{job.human_readable_size.size}} {{job.human_readable_size.unit}})</option>
                     {% endfor %}
+					{% endif %}
                 </select>
             </p>
+			<p>
+				<label>Data inicial:</label> 
+				<input type="text" class="date_picker" name="start_date" value="{{start_date}}" />
+				<label>Data final:</label> 
+				<input type="text" class="date_picker" name="end_date" value="{{end_date}}" />
+				<a href="#" class="css3button positive" onClick="$('#restore_form')[0].action = '/restore/step3/'; $('#restore_form')[0].submit();"><span>Filtrar</span></a>
+			</p>
 			<input type="hidden" name="computer_id" value="{{computer.id}}"></input>
 			<input type="hidden" name="procedure_id" value="{{procedure.id}}"></input>
 			<div>
