--- a/nimbus/restore/templates/step4.html
+++ b/nimbus/restore/templates/step4.html
@@ -19,7 +19,7 @@
 
     <div class="block_content">
 		<h2>Passo 4: Selecionar os arquivos para restauração</h2><br />
-        <form action="/restore/step5/" id="restore_form" method="post">
+        <form action="/restore/step5/" id="step4_form" method="post">
 			<p>
 				<label>Computador:</label> {{computer.name}}
 			</p>
@@ -51,7 +51,7 @@
 			<input type="hidden" name="procedure_id" value="{{procedure.id}}"></input>
 			<input type="hidden" name="job_id" id="job_id" value="{{job.jobid}}"></input>
 			<div>
-				<a href="#" class="css3button positive last_step" onClick="$('#restore_form')[0].action = '/restore/step3/'; $('#restore_form')[0].submit();"><span>Passo 3: Escolher Backup</span></a>
+				<a href="#" class="css3button positive last_step" onClick="$('#step4_form')[0].action = '/restore/step3/'; $('#step4_form')[0].submit();"><span>Passo 3: Escolher Backup</span></a>
 				<a href="#" id="submit_files" class="css3button positive next_step"><span>Passo 5: Escolher local para restauração</span></a>
 			</div>
 		</form>
