BugFix #1030: "Restaurar arquivos em seus locais de origem" empurrado para a esquerda

--- a/nimbus/restore/templates/step5.html
+++ b/nimbus/restore/templates/step5.html
@@ -36,7 +36,7 @@
 				<ul class="veezortree" id="destination" restore="false" destination="true" job="{{job.jobid}}" computer="{{computer.id}}" is_windows="{% if computer.operation_system == "windows" %}true{% else %}false{% endif %}">
 					<li>
 						<input type="radio" checked="true" name="destination_restore_path" value="" class="full_path">
-						<span class="end_path" onclick="fetch_dir_content('destination', 'C:/', '7', 'destination1')">Restaurar arquivos em seus locais de origem</span>
+						<span>Restaurar arquivos em seus locais de origem</span>
 					</li>
 				</ul>
             </p>
