--- a/nimbus/media/css/veezortree.css
+++ b/nimbus/media/css/veezortree.css
@@ -3,7 +3,7 @@ ul.veezortree { border: solid 1px;
 			padding: 10px;
 		  }
 .veezortree ul {display: hidden; padding-left: 17px}
-.veezortree li {margin-top: 3px;}
+.veezortree li {margin-top: 3px; cursor:pointer;}
 .end_path { padding-left: 26px;}
 li.directory {background: url(../icons/folder.png) no-repeat 20px;}
 li.open {background: url(../icons/folder-open.png) no-repeat 20px;}
