BugFix #1015: Alterado "Backup" por "Procedimento"

--- a/nimbus/base/templates/stat_block.html
+++ b/nimbus/base/templates/stat_block.html
@@ -9,7 +9,7 @@ Tipos possíveis: ok, warn, error
 <!-- 	<div id="job_{{job.jobid}}" class="job_line minus"> -->
     <h3>
 		<span class="status_{{job.general_status}}">Status {{job.human_general_status}}</span>
-        {{job.start_time}}: Backup {{job.procedure.name}} de '{{job.procedure.computer.name}}'
+        {{job.start_time}}: Procedimento {{job.procedure.name}} de '{{job.procedure.computer.name}}'
         <div class="clear"></div>
 	</h3>
 	<div id="job_{{job.jobid}}_details">
