--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -9,7 +9,7 @@
 	<link rel="shortcut icon" type="image/x-icon" href="/media/images/favicon.ico" />
 	
 	<link rel="stylesheet" type="text/css" href="/media/lib/css/style.css" />
-	<!-- <link rel="stylesheet" type="text/css" href="/media/lib/css/jquery.filetree.css" /> -->
+	<link rel="stylesheet" type="text/css" href="/media/css/notifications.css" />
 	<link rel="stylesheet" type="text/css" href="/media/lib/css/facebox.css" />
 	<link rel="stylesheet" type="text/css" href="/media/js/progressbar/jquery.ui.all.css" />
 	<link rel="stylesheet" type="text/css" href="/media/lib/css/date_input.css" />
@@ -19,12 +19,10 @@
 	<script type="text/javascript" src="/media/jquery.js"></script>
 	<script type="text/javascript" src="/media/jquery.cookie.js"></script>
     <script type="text/javascript" src="/media/main.js"></script>
-    <!-- // <script type="text/javascript" src="/media/lib/js/jquery.filestyle.mini.js"></script> -->
 	<script type="text/javascript" src="/media/lib/js/jquery.date_input.pack.js"></script>
 	<script type="text/javascript" src="/media/lib/js/facebox.js"></script>
 	<script type="text/javascript" src="/media/lib/js/ajaxupload.js"></script>
 	<script type="text/javascript" src="/media/lib/js/jquery.pngfix.js"></script>
-	<!-- // <script type="text/javascript" src="/media/lib/js/jquery.filetree.js"></script> -->
 	<script src="/media/js/progressbar/jquery.ui.core.min.js" type="text/javascript"></script>
 	<script src="/media/js/progressbar/jquery.ui.widget.min.js" type="text/javascript"></script>
 	<script src="/media/js/progressbar/jquery.ui.progressbar.min.js" type="text/javascript"></script>
@@ -34,9 +32,8 @@
     <link href="/media/jquery-ui-1.7.2.custom.css" rel="stylesheet" type="text/css"/>
 
 	<script type="text/javascript" src="/media/lib/js/custom.js"></script>
-	<!-- style procedure list -->
 	<script type="text/javascript" src="/media/js/base.js"></script>
-    <!-- <link rel="stylesheet" type="text/css" href="/media/css/procedures.css" /> -->
+	<script type="text/javascript" src="/media/js/notifications.js"></script>
 
 
 	{% block headtags %}{% endblock %}
@@ -103,7 +100,6 @@
                         </ul>
 					</li>
 				</ul>
-				
 				<!-- <p class="user">Olá, <a href="#">Administrador</a> | <a href="index.html">Sair do sistema</a></p> -->
 				{% include "status_header.html" %}
 				<div id="logout-button" class="align_right"><a href="/session/logout">Sair</a></div>
@@ -111,6 +107,7 @@
 			        <small>Horário</small><br/>
 			        <span id="actual_time">{% now "H:i:s" %}</span>
 			    </div>
+				<div id="notifier"></div>
 			</div>
 			<noscript><div class="message error">Atenção! Seu javascript precisa estar ativo para usar o Nimbus corretamente.</div></noscript>
             {% if messages %}
