Alterado "adicionar computador" para "ativar novo computador"

--- a/nimbus/computers/templates/computers_add.html
+++ b/nimbus/computers/templates/computers_add.html
@@ -8,7 +8,7 @@
 {% block page %}
 
 <div class="message info">
-    <p> Para adicionar um computador ao sistema é necessário instalar o software cliente. Para obtê-lo clique <a href="http://download.nimbusbackup.com/client/"> aqui </a>. </p>
+    <p> Para ativar um novo computador ao sistema é necessário instalar o software cliente. Para obtê-lo clique <a href="http://download.nimbusbackup.com/client/"> aqui </a>. </p>
 </div>
 
 <div class="block">
@@ -48,8 +48,8 @@
                 <div class="clear"></div>
             </div>
         {% empty %}
-            <h2>Não existem computadores pendentes para adição.</h2>
-            <p>Para adicionar um computador você deve instalar o software cliente na máquina cliente.</p>
+            <h2>Não existem computadores pendentes para ativação.</h2>
+            <p>Para ativar um novo computador você deve instalar o software cliente na máquina cliente.</p>
         {% endfor %}
         </div>
     
