--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -61,7 +61,7 @@
                     <li class="active"><a href="#">Computadores</a>
 					    <ul>
                             <li><a href="/computers/list">Listar computador</a></li>
-                            <li><a href="/computers/add">Adicionar computador</a></li>
+                            <li><a href="/computers/add">Ativar novo computador</a></li>
                             <li><a href="/storages/list">Listar Armazenamento</a></li>
                             <li><a href="/storages/add">Adicionar Armazenamento</a></li>
                         </ul>
