Tickets #1075 e #1076: Removido self-backup do histórico e feito o "Sobre o Nimbus"

--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -96,6 +96,7 @@
 					</li>
 					<li class="nobg"><a href="#">Ajuda</a>
                         <ul>
+                            <li><a href="/base/about" id="about_buttom">Sobre o Nimbus</a></li>
                             <li><a href="http://forum.nimbusbackup.com">Fórum</a></li>
                         </ul>
 					</li>
