--- a/nimbus/network/templates/redirect.html
+++ b/nimbus/network/templates/redirect.html
@@ -7,7 +7,7 @@
         ip_address = '{{ ip_address }}';
         
         setTimeout(function() {
-            document.location.href = 'http://{{ ip_address }}/{{ url }}';
+            document.location.href = 'http://{{ ip_address }}{{ url }}';
         }, 10000);
     });
 </script>
