Correções pequenas de interface

--- a/nimbus/restore/templates/step4.html
+++ b/nimbus/restore/templates/step4.html
@@ -55,7 +55,7 @@
 			<input type="hidden" name="procedure_id" value="{{procedure.id}}"></input>
 			<input type="hidden" name="job_id" id="job_id" value="{{job.jobid}}"></input>
 			<div>
-				<a href="#" class="css3button positive last_step" onClick="$('#step4_form')[0].action = '/restore/step3/'; $('#step4_form')[0].submit();"><span>Passo 3: Escolher Backup</span></a>
+				<a href="#" class="css3button negative last_step" onClick="$('#step4_form')[0].action = '/restore/step3/'; $('#step4_form')[0].submit();"><span>Passo 3: Escolher Backup</span></a>
 				<a href="#" id="submit_files" class="css3button positive next_step"><span>Passo 5: Escolher local para restauração</span></a>
 			</div>
 		</form>
