Correção da posição das notificações

--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -42,6 +42,7 @@
 <body>
 	<div id="hld">
 		<div class="wrapper">
+			<div style="position: relative;">
 			<div id="header">
 				<div class="hdrl"></div>
 				<div class="hdrr"></div>
@@ -135,6 +136,7 @@
 				<p class="left"><a href="http://trynimbus.com">Nimbus Opensource</a> é uma iniciativa <a href="http://veezor.com"><img src="/media/lib/images/logo_veezor.gif" alt="Veezor® Network Intelligence" /></a> |
 				<a href="/LICENSE/">Terms and License</a></p>
 				<p class="right">Nimbus Opensource Backup v1.1</p>
+			</div>
 			</div>
 		</div>
 	</div>
