--- a/nimbus/media/css/procedures.css
+++ b/nimbus/media/css/procedures.css
@@ -93,7 +93,10 @@ div.inactive {
     background: #FDD;
 }
 .fileset {
-    border: 2px solid #67c7a1;
+/*    OPENSOURCE:*/
+/*    border: 2px solid #67c7a1;*/
+/*    PROFESSIONAL:*/
+    border: 2px solid #8D352F;
     padding: 0;
     background: #fff;
     -moz-border-radius: 5px;
@@ -101,7 +104,10 @@ div.inactive {
 }
 
 .fileset .title{
-    background: #67c7a1;
+/*    OPENSOURCE:*/
+/*    background: #67c7a1;*/
+/*    PROFESSIONAL:*/
+    background: #8D352F;
     color: #000;
     padding: 5px;
 }
