Corrigindo logos Professional na tela de login

--- a/nimbus/base/templates/base_login.html
+++ b/nimbus/base/templates/base_login.html
@@ -47,7 +47,8 @@
 	
 		<div class="wrapper">		<!-- wrapper begins -->
 		    
-		    <div class="logo_center"><img src="/media/images/nimbus_logo_opensource.png" /></div>
+		    <!-- <div class="logo_center"><img src="/media/images/nimbus_logo_opensource.png" /></div> -->
+		    <div class="logo_center"><img src="/media/images/nimbus_logo_professional.png" /></div>
 		    
 			
 			<div class="block small center login">
