--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -23,10 +23,10 @@
 	<script type="text/javascript" src="/media/lib/js/facebox.js"></script>
 	<script type="text/javascript" src="/media/lib/js/ajaxupload.js"></script>
 	<script type="text/javascript" src="/media/lib/js/jquery.pngfix.js"></script>
-	<script src="/media/js/progressbar/jquery.ui.core.min.js" type="text/javascript"></script>
-	<script src="/media/js/progressbar/jquery.ui.widget.min.js" type="text/javascript"></script>
-	<script src="/media/js/progressbar/jquery.ui.progressbar.min.js" type="text/javascript"></script>
-	<script src="/media/js/jquery.maskedinput-1.2.2.min.js" type="text/javascript"></script>
+	<script type="text/javascript" src="/media/js/progressbar/jquery.ui.core.min.js"></script>
+	<script type="text/javascript" src="/media/js/progressbar/jquery.ui.widget.min.js"></script>
+	<script type="text/javascript" src="/media/js/progressbar/jquery.ui.progressbar.min.js"></script>
+	<script type="text/javascript" src="/media/js/jquery.maskedinput-1.2.2.min.js"></script>
 	
 	<script type="text/javascript" src="/media/jquery-ui.js"></script>
     <link href="/media/jquery-ui-1.7.2.custom.css" rel="stylesheet" type="text/css"/>
