--- a/nimbus/media/css/about.css
+++ b/nimbus/media/css/about.css
@@ -1,7 +1,8 @@
 #about {
     border: solid 1px;
     text-align: center;
-    background: url('/media/images/nimbus_logo_opensource.png') no-repeat 20px 20px;
+/*    background: url('/media/images/nimbus_logo_opensource.png') no-repeat 20px 20px;*/
+    background: url('/media/images/nimbus_logo_professional.png') no-repeat 20px 20px;
 }
 #about_block {
     width: 400px;
