--- a/nimbus/base/templates/base_wizard.html
+++ b/nimbus/base/templates/base_wizard.html
@@ -64,7 +64,8 @@
 
 		<div class="wrapper">		<!-- wrapper begins -->
 
-		    <div class="logo_center"><img src="/media/images/nimbus_logo_opensource.png" /></div>
+		    <!-- <div class="logo_center"><img src="/media/images/nimbus_logo_opensource.png" /></div> -->
+		    <div class="logo_center"><img src="/media/images/nimbus_logo_professional.png" /></div>
 
 			<div class="block small center login {{wide}}">
 
