Revert "Removendo features". As features são removidas do professional
This reverts commit 3c3f87e011d6d5bed01cbc7a056e0f87841166e2.

--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -72,6 +72,7 @@
     					    <li><a href="/offsite/detail">Detalhes do offsite</a></li>
     					    <li><a href="/offsite/edit">Editar configurações</a></li>
                             <li><a href="/offsite/list_uploadrequest">Uploads ativos</a></li>
+                            <li><a href="/offsite/list_downloadrequest">Downloads ativos</a></li>
                             <li><a href="/procedures/list_offsite">Procedimentos do offsite</a></li>
                         </ul>
                     </li>
@@ -80,6 +81,10 @@
                             <li><a href="/system/network_tool/ping/">Ping</a></li>
                             <li><a href="/system/network_tool/traceroute/">Traceroute</a></li>
                             <li><a href="/system/network_tool/nslookup/">NSLookup</a></li>
+                            <!-- <li><a href="/system/stat/">Estado do sistema</a></li> -->
+                            <li><a href="/system/security_copy/">Cópia de segurança</a></li>
+                            <li><a href="/system/umount">Remover dispositivo externo</a></li>
+                            <li><a href="/system/pid_history/">Monitorar processos internos</a></li>
                         </ul>
 					</li>
 					<li><a href="#">Configurações</a>
